Issue #103: Refactor user update (#110)
