# openapi/users-openapi.yaml
@@ -111,7 +111,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
         "404":
-          description: The user associated with the userID does not exist.
+          description: The user associated with the ID does not exist.
           content:
             application/json:
               schema:
@@ -154,7 +154,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
         "404":
-          description: The user associated with the userID does not exist.
+          description: The user associated with the ID does not exist.
           content:
             application/json:
               schema:
@@ -165,6 +165,50 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+
+    patch:
+      summary: Associates a player with a user.
+      description: On successful completion, the playerID is associated with the user.
+      operationId: AssociatePlayer
+      parameters:
+        - name: id
+          description: The ID of the user.
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AssociatePlayerRequest"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UsersResponse"
+        "400":
+          description: A bad request was sent.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: The user associated with the ID does not exist.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: An internal server error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
     delete:
       summary: Remove removes a user.
       description: On successful completion, the user is removed.
@@ -251,17 +295,11 @@ components:
       required:
         - login
         - publicKey
-        - playerID
       properties:
         login:
           type: string
-          x-order: 1
         publicKey:
           type: string
-          x-order: 2
-        playerID:
-          type: string
-          x-order: 3
 
     UserUpdateRequest:
       type: object
@@ -269,17 +307,20 @@ components:
       required:
         - login
         - publicKey
-        - playerID
       properties:
         login:
           type: string
-          x-order: 1
         publicKey:
           type: string
-          x-order: 2
+
+    AssociatePlayerRequest:
+      type: object
+      description: AssociatePlayerRequest is used to associate a player to the user.
+      required:
+        - playerID
+      properties:
         playerID:
           type: string
-          x-order: 3
 
     ErrorResponse:
       type: object
